--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,30 +11,48 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartHome">
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".OnboardingActivity" />
-        <activity android:name=".SignInActivity" />
-        <activity android:name=".SignUpActivity" />
-        <activity android:name=".OTPActivity" />
-        <activity android:name=".DeviceScanActivity" />
-        <activity android:name=".RoomsActivity" />
-        <activity android:name=".SettingsActivity" />
-        <activity android:name=".SearchActivity" />
-        <activity android:name=".ProfileActivity" />
-        <activity android:name=".TvRemoteActivity" />
-        <activity android:name=".LampControlActivity" />
-        <activity android:name=".AcControlActivity" />
-        <activity android:name=".UserProfileActivity" />
-        <activity android:name=".DeviceDiscoveryActivity" />
+
+        <activity
+            android:name=".OnboardingActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".SignInActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".SignUpActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".OTPActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".DeviceScanActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".RoomsActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".DeviceManagementActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
