--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SmartHome">
+        android:theme="@style/Theme.SmartHome"
+        android:forceDarkAllowed="false">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +23,19 @@
         </activity>
 
         <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".OnboardingActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".Onboarding2Activity"
+            android:exported="false" />
+
+        <activity
+            android:name=".Onboarding3Activity"
             android:exported="false" />
 
         <activity
@@ -46,11 +59,39 @@
             android:exported="false" />
 
         <activity
+            android:name=".DeviceDiscoveryActivity"
+            android:exported="false" />
+
+        <activity
             android:name=".RoomsActivity"
             android:exported="false" />
 
         <activity
             android:name=".DeviceManagementActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".AcControlActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".LampControlActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".TvRemoteActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".UserProfileActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".AccountManagementActivity"
             android:exported="false" />
 
     </application>
